Refactor: moved js and used partial view

--- a/UmbracoWebsite_ST/Views/_Layout.cshtml
+++ b/UmbracoWebsite_ST/Views/_Layout.cshtml
@@ -36,6 +36,7 @@
     ======================================================== -->
 
      <script src="~/Scripts/jquery-3.7.0.min.js" type="text/javascript"></script>
+     <script src="~/Scripts/website.js" type="text/javascript"></script>
 </head>
 
 <body>
