--- a/UmbracoWebsite_ST/Views/Shared/_NewsItems.cshtml
+++ b/UmbracoWebsite_ST/Views/Shared/_NewsItems.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             @foreach (var item in Model.News)
             {
-                <div class="col d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="col-lg-2 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box iconbox-blue">
                         <div class="icon">
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
